added order,req order

--- a/public/components/staticpart/contact.html
+++ b/public/components/staticpart/contact.html
@@ -20,6 +20,7 @@
 							<!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
 							<!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
 							<li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
+							<li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
 						</ul>
 						<!-- <div class="search-box">
 							<div id="sb-search" class="sb-search">
