--- a/public/components/staticpart/about.html
+++ b/public/components/staticpart/about.html
@@ -19,7 +19,7 @@
                         <li><a class="hvr-overline-from-center button2" href="about">About</a></li>
                         <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
                         <li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
-                        <li><a class="hvr-overline-from-center button2" href="user">Login</a></li>
+                        <li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
                     </ul>
                     <!-- <div class="search-box">
 								<div id="sb-search" class="sb-search">
