added more functionality

--- a/public/components/sidebar/sidebar.html
+++ b/public/components/sidebar/sidebar.html
@@ -11,6 +11,27 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.order"><i class="fa fa-table fa-fw"></i>Current Orders</a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.orderHistory"><i class="fa fa-table fa-fw"></i>Order History</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.assignedTrips"><i class="fa fa-table fa-fw"></i>Assigned Trips</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.ongoingTrips"><i class="fa fa-table fa-fw"></i>Ongoing Trips</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.fut1"><i class="fa fa-table fa-fw"></i>Future Maps</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.fut2"><i class="fa fa-table fa-fw"></i>Future Alerts</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.fut3"><i class="fa fa-table fa-fw"></i>Future Return Loads</a>
+            </li>
+            <li ui-sref-active="active">
+                <a ui-sref="dashboard.fut4"><i class="fa fa-table fa-fw"></i>Future Info</a>
+            </li>
             <!-- <li ui-sref-active="active">
                 <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
             </li> -->
