improved func, added new func

--- a/public/components/staticpart/about.html
+++ b/public/components/staticpart/about.html
@@ -15,28 +15,22 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a class="hvr-overline-from-center button2 active" href="/">Home</a></li>
+                        <li><a class="hvr-overline-from-center button2 active" href="home">Home</a></li>
                         <li><a class="hvr-overline-from-center button2" href="about">About</a></li>
                         <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
                         <li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
                         <li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
                     </ul>
                     <!-- <div class="search-box">
-								<div id="sb-search" class="sb-search">
-									<form>
-										<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
-										<input class="sb-search-submit" type="submit" value="">
-										<span class="sb-icon-search"> </span>
-									</form>
-								</div>
-							</div> -->
+                                <div id="sb-search" class="sb-search">
+                                    <form>
+                                        <input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
+                                        <input class="sb-search-submit" type="submit" value="">
+                                        <span class="sb-icon-search"> </span>
+                                    </form>
+                                </div>
+                            </div> -->
                 </div>
-                <!-- /navbar-collapse -->
-                <!-- search-scripts -->
-                <script>
-                new UISearch(document.getElementById('sb-search'));
-                </script>
-                <!-- //search-scripts -->
             </nav>
         </div>
     </div>
@@ -52,21 +46,21 @@
         <div class="container">
             <div class="help-grid">
                 <h3 class="tittle tit3">WHO WE ARE</h3>
-                <p> Founded by MBA graduates,IIT-Bombay,IIT-Kanpur,Alumni LogiPort is Technology Based Logistics platform with a sole purpose of ruthlessly reduce inefficiencies in the commercial vehicle transportation space by applying technology and big data analytics</p>
+                <p> Founded by an MBA graduate and 3 IIT-Bombay Alumni, LogiPort is Technology Based Logistics platform with a sole purpose of ruthlessly reduce inefficiencies in the commercial vehicle transportation space by applying technology and big data analytics </p>
             </div>
             <br>
             <div class="help-grid">
                 <h3 class="tittle tit3">WHAT WE DO</h3>
-                <p>We provide Intelligent Transportation Solutions to our clients that primarily address 4 key areas of a fleet opertions
+                <p>We provide Intelligent Transportation Solutions to our clients that primarily address 4 key areas of a fleet operations
                     <p>
                         <div style="color:#BBE8EA">
-                            1.Real Time tracking of fleet with complete geo-visualization,Load status and Driver status
+                            1.Real Time tracking of fleet with complete geo-visualization, Load status, and Driver status
                         </div>
                         <div style="color:#BBE8EA">
                             2.Providing routing and dispatch management.
                         </div>
                         <div style="color:#BBE8EA">
-                            3.We provide unmatched delivery timings with the help of our healthy technology based transportation Eco-System and unique driver Engangments
+                            3. We provide unmatched delivery timings with the help of our healthy technology-based transportation Ecosystem and unique driver Engagements
                         </div>
                         <div style="color:#BBE8EA">
                             4.Enable real-time communications, not just with the driver, but with truck and cargo monitoring systems with alerts when prescribed parameters are exceeded.
@@ -75,7 +69,7 @@
             <br>
             <div class="help-grid">
                 <h3 class="tittle tit3">WHY US?</h3>
-                <p>At LogiPort we are enabling logistics with technology and re-invented it,thus making it efficient and sustainable. We first seek to understand our clients needs and establish a baseline on which to operate and provide technology platform to fulfill that need with relaiblity while improving operationly effciency such as driver engangment and on ground quick response.
+                <p>At LogiPort we are enabling logistics with technology and re-invented it, thus making it efficient and sustainable. We first seek to understand our clients needs and establish a baseline on which to operate and provide a technology platform to fulfill that need with reliability while improving operational efficiency such as driver engagement and on the ground quick response.
                 </p>
             </div>
             <div class="clearfix"></div>
@@ -100,13 +94,13 @@
         <script type="text/javascript">
         $(document).ready(function() {
             /*
-            	var defaults = {
-            	containerID: 'toTop', // fading element id
-            	containerHoverID: 'toTopHover', // fading element hover id
-            	scrollSpeed: 1200,
-            	easingType: 'linear' 
-            	};
-            	*/
+                var defaults = {
+                containerID: 'toTop', // fading element id
+                containerHoverID: 'toTopHover', // fading element hover id
+                scrollSpeed: 1200,
+                easingType: 'linear' 
+                };
+                */
             $().UItoTop({
                 easingType: 'easeOutQuart'
             });
