--- a/public/components/staticpart/contact.html
+++ b/public/components/staticpart/contact.html
@@ -10,12 +10,12 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-					    <h1><a class="navbar-brand" href="index.html"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
+					    <h1><a class="navbar-brand" href="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
-							<li><a class="hvr-overline-from-center button2 active" href="/">Home</a></li>
+							<li><a class="hvr-overline-from-center button2 active" href="home">Home</a></li>
 							<li><a class="hvr-overline-from-center button2" href="about">About</a></li>
 							<!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
 							<!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
@@ -32,10 +32,6 @@
 							</div>
 						</div> -->
 					</div><!-- /navbar-collapse -->
-						<script>
-							new UISearch( document.getElementById( 'sb-search' ) );
-						</script>
-					<!-- //search-scripts -->
 				</nav>
 			</div>
 		</div>
