--- a/public/components/header/header.html
+++ b/public/components/header/header.html
@@ -1,16 +1,14 @@
-<nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-default navbar-static-top dashboard" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
-
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">LogiPort Admin</a>
+        <a class="navbar-brand dashboardHeader" ui-sref="dashboard.home">LogiPort Admin</a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
-
     <sidebar></sidebar>
 </nav>
