--- a/public/components/sidebar/sidebar.html
+++ b/public/components/sidebar/sidebar.html
@@ -2,9 +2,9 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
             <sidebar-search></sidebar-search>
-            <!-- <li ui-sref-active="active">
+            <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
-            </li> -->
+            </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.reqOrder"><i class="fa fa-bar-chart-o fa-fw"></i>Requested Orders<span></span></a>
             </li>
