logout not working

--- a/public/components/dashboard/main.html
+++ b/public/components/dashboard/main.html
@@ -1,17 +1,12 @@
 <div id="wrapper">
-
-        <!-- Navigation -->
-            
+    <!-- Navigation -->
+    <div ng-controller="headerController">
         <header></header>
-        <!-- /.navbar-top-links -->
-        
-               
-        <!-- /.navbar-static-side -->
-
-            <div id="page-wrapper" style="min-height: 561px;">
-
-                <div ui-view></div>
-                
-            </div>
-            <!-- /#page-wrapper -->
     </div>
+    <!-- /.navbar-top-links -->
+    <!-- /.navbar-static-side -->
+    <div id="page-wrapper" style="min-height: 561px;">
+        <div ui-view></div>
+    </div>
+    <!-- /#page-wrapper -->
+</div>
