--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -96,7 +96,7 @@
             <div class="col-md-4 bottom-grid">
                 <div class="bottom-text">
                     <h3>Reliability</h3>
-                    <p>Time to value manage logistics risk Client centric approach efficient services</p>
+                    <p>Time to value<br> manage logistics risk<br> Client centric approach<br> efficient services</p>
                     <br>
                     <br>
                     <br>
