Fixed CSS issues

--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -1,26 +1,26 @@
-<div class="header">
+<div class="header header-temp">
     <div class="container">
         <div class="header-nav">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-temp navbar-default navbar-default-temp">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <button type="button" class="navbar-toggle navbar-toggle-temp collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
                     </button>
-                    <h2><a class="navbar-brand" ui-sref="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h2>
+                    <h2><a class="navbar-brand navbar-brand-temp" ui-sref="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h2>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a class="hvr-overline-from-center button2 active" href="home">Home</a></li>
-                        <li><a class="hvr-overline-from-center button2" href="about">About</a></li>
+                <div class="collapse navbar-collapse navbar-collapse-temp nav-wil" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-nav-temp">
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2 active active-temp" href="home">Home</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="about">About</a></li>
                         <!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
                         <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
-                        <li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
-                        <li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="contact">Contact</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li>
                     </ul>
                     <!-- <div class="search-box">
 							<div id="sb-search" class="sb-search">
@@ -40,7 +40,7 @@
 </div>
 <!-- header -->
 <!-- banner -->
-<div class="banner">
+<div class="banner banner-temp">
     <div class="container">
         <script>
         // You can also use "$(window).load(function() {"
@@ -61,25 +61,25 @@
             });
         });
         </script>
-        <div id="top" class="callbacks_container">
-            <ul class="rslides" id="slider3">
+        <div id="top" class="callbacks_container callbacks_container-temp">
+            <ul class="rslides rslides-temp" id="slider3">
                 <li>
-                    <div class="banner-info">
+                    <div class="banner-info banner-info-temp">
                         <h3>Enabling Logistics with Technology</h3>
                     </div>
                 </li>
                 <li>
-                    <div class="banner-info">
+                    <div class="banner-info banner-info-temp">
                         <h3>Efficient and sustainable solutions </h3>
                     </div>
                 </li>
                 <li>
-                    <div class="banner-info">
+                    <div class="banner-info banner-info-temp">
                         <h3>Big Data for Big Industry</h3>
                     </div>
                 </li>
                 <li>
-                    <div class="banner-info">
+                    <div class="banner-info banner-info-temp">
                         <h3>Operational Excellence</h3>
                     </div>
                 </li>
@@ -88,37 +88,37 @@
     </div>
 </div>
 <!-- //banner -->
-<!-- banner-bottom -->
-<div class="banner-bottom">
+<!-- banner-bottom banner-bottom-temp -->
+<div class="banner-bottom banner-bottom-temp">
     <div class="container">
-        <h2 class="tittle">WELCOME TO LOGIPORT</h2>
-        <div class="bottom-grids">
-            <div class="col-md-4 bottom-grid">
-                <div class="bottom-text">
+        <h2 class="tittle tittle-temp">WELCOME TO LOGIPORT</h2>
+        <div class="bottom-grids bottom-grids-temp">
+            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
+                <div class="bottom-text bottom-text-temp">
                     <h3>Reliability</h3>
                     <p>Time to value<br> manage logistics risk<br> Client centric approach<br> efficient services</p>
                     <br>
                     <br>
                     <br>
                 </div>
-                <div class="bottom-spa"><span class="glyphicon glyphicon-road" aria-hidden="true"></span></div>
+                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-road" aria-hidden="true"></span></div>
             </div>
-            <div class="col-md-4 bottom-grid">
-                <div class="bottom-text">
+            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
+                <div class="bottom-text bottom-text-temp">
                     <h3>Visiblity</h3>
                     <p>Real Time tracking of fleet with complete geo-visualization,Load status and Driver status.</p>
                     <br>
                     <br>
                     <br>
                 </div>
-                <div class="bottom-spa"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
+                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
             </div>
-            <div class="col-md-4 bottom-grid">
-                <div class="bottom-text">
+            <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
+                <div class="bottom-text bottom-text-temp">
                     <h3>Efficiency</h3>
                     <p>With Technology at core bringing disruptive business models to Logistics industry and getting better solutions and services for sustainable growth.</p>
                 </div>
-                <div class="bottom-spa"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
+                <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-star" aria-hidden="true"></span></div>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -126,15 +126,15 @@
 </div>
 <!-- //banner-bottom
 <!-- footer -->
-<div class="footer">
+<div class="footer footer-temp">
     <div class="container">
-        <div class="contact">
+        <div class="contact contact-temp">
             <div class="container">
                 <div class="contact-page">
                     <div class="contact-info">
-                        <h2 class="tittle">CONTACT</h2>
+                        <h2 class="tittle tittle-temp">CONTACT</h2>
                     </div>
-                    <div class="contact-form">
+                    <div class="contact-form contact-form-temp">
                         <form>
                             <input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
                             <input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
