--- a/public/components/staticpart/about.html
+++ b/public/components/staticpart/about.html
@@ -1,25 +1,25 @@
-<div class="header">
+<div class="header header-temp">
     <div class="container">
         <div class="header-nav">
-            <nav class="navbar navbar-default">
+            <nav class="navbar navbar-temp navbar-default navbar-default-temp">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <button type="button" class="navbar-toggle navbar-toggle-temp collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
+                        <span class="icon-bar icon-bar-temp"></span>
                     </button>
-                    <h1><a class="navbar-brand" href="index.html"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
+                    <h1><a class="navbar-brand navbar-brand-temp" href="index.html"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a class="hvr-overline-from-center button2 active" href="home">Home</a></li>
-                        <li><a class="hvr-overline-from-center button2" href="about">About</a></li>
-                        <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
-                        <li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
-                        <li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
+                <div class="collapse navbar-collapse navbar-collapse-temp nav-wil" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-nav-temp">
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="home">Home</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2 active active-temp" href="about">About</a></li>
+                        <!-- <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="services.html">Services</a></li> -->
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="contact">Contact</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li>
                     </ul>
                     <!-- <div class="search-box">
                                 <div id="sb-search" class="sb-search">
@@ -37,20 +37,20 @@
 </div>
 <!-- header -->
 <!-- banner -->
-<div class="banner page-head">
+<div class="banner banner-temp page-head page-head-temp">
 </div>
 <!-- //banner -->
 <!-- about -->
-<div class="about">
-    <div class="help-grids">
+<div class="about about-temp">
+    <div class="help-grids help-grids-temp">
         <div class="container">
-            <div class="help-grid">
-                <h3 class="tittle tit3">WHO WE ARE</h3>
+            <div class="help-grid help-grid-temp">
+                <h3 class="tittle tittle-temp tit3 tit3-temp">WHO WE ARE</h3>
                 <p> Founded by an MBA graduate and 3 IIT-Bombay Alumni, LogiPort is Technology Based Logistics platform with a sole purpose of ruthlessly reduce inefficiencies in the commercial vehicle transportation space by applying technology and big data analytics </p>
             </div>
             <br>
-            <div class="help-grid">
-                <h3 class="tittle tit3">WHAT WE DO</h3>
+            <div class="help-grid help-grid-temp">
+                <h3 class="tittle tittle-temp tit3 tit3-temp">WHAT WE DO</h3>
                 <p>We provide Intelligent Transportation Solutions to our clients that primarily address 4 key areas of a fleet operations
                     <p>
                         <div style="color:#BBE8EA">
@@ -67,8 +67,8 @@
                         </div>
             </div>
             <br>
-            <div class="help-grid">
-                <h3 class="tittle tit3">WHY US?</h3>
+            <div class="help-grid help-grid-temp">
+                <h3 class="tittle tittle-temp tit3 tit3-temp">WHY US?</h3>
                 <p>At LogiPort we are enabling logistics with technology and re-invented it, thus making it efficient and sustainable. We first seek to understand our clients needs and establish a baseline on which to operate and provide a technology platform to fulfill that need with reliability while improving operational efficiency such as driver engagement and on the ground quick response.
                 </p>
             </div>
@@ -76,17 +76,17 @@
         </div>
     </div>
 </div>
-<div class="about-bottom-last">
+<div class="about-bottom-last about-bottom-last-temp">
     <div class="container">
         <div class="help-info">
         </div>
     </div>
     <!-- //about -->
     <!-- footer -->
-    <div class="footer">
+    <div class="footer footer-temp">
         <div class="container">
             <div class="footer-grids">
-                <div class="col-md-3 footer-grid">
+                <div class="col-md-3 footer-grid footer-grid-temp">
                 </div>
             </div>
         </div>
