--- a/public/components/staticpart/contact.html
+++ b/public/components/staticpart/contact.html
@@ -1,26 +1,26 @@
-<div class="header">
+<div class="header header-temp">
 		<div class="container">
 			<div class="header-nav">
-				<nav class="navbar navbar-default">
+				<nav class="navbar navbar-temp navbar-default navbar-default-temp">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<button type="button" class="navbar-toggle navbar-toggle-temp collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
+							<span class="icon-bar icon-bar-temp"></span>
+							<span class="icon-bar icon-bar-temp"></span>
+							<span class="icon-bar icon-bar-temp"></span>
 						</button>
-					    <h1><a class="navbar-brand" href="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
+					    <h1><a class="navbar-brand navbar-brand-temp" href="home"><i style="padding-top:10px" class="glyphicon glyphicon-road" aria-hidden="true"></i><span>Logi</span>Port</a></h1>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
-						<ul class="nav navbar-nav">
-							<li><a class="hvr-overline-from-center button2 active" href="home">Home</a></li>
-							<li><a class="hvr-overline-from-center button2" href="about">About</a></li>
+					<div class="collapse navbar-collapse navbar-collapse-temp nav-wil" id="bs-example-navbar-collapse-1">
+						<ul class="nav navbar-nav navbar-nav-temp">
+							<li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="home">Home</a></li>
+							<li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="about">About</a></li>
 							<!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
 							<!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
-							<li><a class="hvr-overline-from-center button2" href="contact">Contact</a></li>
-							<li><a class="hvr-overline-from-center button2" href="login">Login</a></li>
+							<li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2 active active-temp" href="contact">Contact</a></li>
+							<li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li>
 						</ul>
 						<!-- <div class="search-box">
 							<div id="sb-search" class="sb-search">
@@ -38,20 +38,20 @@
 </div>
 <!-- header -->
 <!-- banner -->
-<div class="banner page-contact">
+<div class="banner banner-temp page-contact">
 </div>
 <!-- //banner -->
 <!-- contact-page -->
-<div class="contact">
+<div class="contact contact-temp">
 	<div class="container">
 		<div class="contact-page">
 			<div class="contact-info">
-				<h2 class="tittle">CONTACT</h2>
+				<h2 class="tittle tittle-temp">CONTACT</h2>
 			</div>
-			<div class="contact-map">
+			<div class="contact-map contact-map-temp">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819"></iframe>
 			</div>
-			<div class="contact-form">
+			<div class="contact-form contact-form-temp">
 				<form>
 						<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
 						<input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
