--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,16 +1,11 @@
 body {
-    padding-bottom: 20px
+    /*padding-bottom: 20px*/
 }
 
 .footer,
-.header,
 .marketing {
     padding-left: 15px;
     padding-right: 15px
-}
-
-.header {
-    border-bottom: 1px solid #e5e5e5
 }
 
 .header h3 {
@@ -23,7 +18,7 @@ body {
 .footer {
     padding-top: 19px;
     color: #777;
-    border-top: 1px solid #e5e5e5
+    /*border-top: 1px solid #e5e5e5*/
 }
 
 @media (min-width:768px) {
@@ -56,13 +51,9 @@ body {
 
 @media screen and (min-width:768px) {
     .footer,
-    .header,
     .marketing {
         padding-left: 0;
         padding-right: 0
-    }
-    .header {
-        margin-bottom: 30px
     }
     .jumbotron {
         border-bottom: 0
@@ -75,7 +66,8 @@ body {
 }
 
 .dashboard{
-    background-color: #f8f8f8!important;
+    /*background-color: #f8f8f8!important;*/
+    background-color: #e6e6e6!important;
 }
 .dashboardHeader{
     color: #337ab7!important;
