--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -91,7 +91,9 @@ body {
 }
 
 .sidebar .sidebar-search {
-    padding: 15px
+    padding: 15px;
+    background:#e6e6e6;
+    margin-top: -1px;
 }
 
 .sidebar ul li {
