--- a/public/components/order/order.html
+++ b/public/components/order/order.html
@@ -1,4 +1,4 @@
-<div ng-controller="orderCtrl">
+<div>
     <div class="row">
         <div class="col-lg-8">
             <h1 class="page-header">Current Orders</h1>
@@ -18,6 +18,7 @@
                         <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                             <thead>
                                 <tr>
+                                    <th>Id</th>
                                     <th>Order Type</th>
                                     <th>From</th>
                                     <th>To</th>
@@ -25,8 +26,10 @@
                                     <th>Completed %</th>
                                     <th>Deadline</th>
                                     <th>WaitTime</th>
+                                    <th>Assign Trips</th>
                                     <tbody>
                                         <tr class="odd gradeX" ng-repeat="order in orders">
+                                            <td>{{order.id}}</td>
                                             <td>{{order.orderType}}</td>
                                             <td>{{order.startLocation}}</td>
                                             <td>{{order.endLocation}}</td>
@@ -34,6 +37,8 @@
                                             <td>{{order.tonDone}}</td>
                                             <td>{{order.deadline}}</td>
                                             <td>{{order.waitTime}}</td>
+                                            <td><button class="btn btn-sm btn-primary" ng-click="assignTrip(order.id)">Assign</button></td>
+                                            <td><button ng-click="count = count + 1">{{count}}</button></td>
                                         </tr>
                                     </tbody>
                                 </tr>
