--- a/public/components/sidebar/sidebar.html
+++ b/public/components/sidebar/sidebar.html
@@ -12,7 +12,7 @@
                 <a ui-sref="dashboard.order"><i class="fa fa-table fa-fw"></i>Current Orders</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.orderHistory"><i class="fa fa-table fa-fw"></i>Order History</a>
+                <a ui-sref="dashboard.orderHistory"><i class="fa fa-history fa-fw"></i>Order History</a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.assignedTrips"><i class="fa fa-table fa-fw"></i>Assigned Trips</a>
@@ -21,20 +21,17 @@
                 <a ui-sref="dashboard.ongoingTrips"><i class="fa fa-table fa-fw"></i>Ongoing Trips</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.fut1"><i class="fa fa-table fa-fw"></i>Future Maps</a>
+                <a ui-sref="dashboard.fut1"><i class="fa fa-map-marker fa-fw"></i>Maps</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.fut2"><i class="fa fa-table fa-fw"></i>Future Alerts</a>
+                <a ui-sref="dashboard.fut2"><i class="fa fa-fire fa-fw"></i>Alerts</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.fut3"><i class="fa fa-table fa-fw"></i>Future Return Loads</a>
+                <a ui-sref="dashboard.fut3"><i class="fa fa-table fa-fw"></i>Return Loads</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.fut4"><i class="fa fa-table fa-fw"></i>Future Info</a>
+                <a ui-sref="dashboard.fut4"><i class="fa fa-line-chart fa-fw"></i>Info</a>
             </li>
-            <!-- <li ui-sref-active="active">
-                <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
-            </li> -->
             <!-- <li ng-class="{active: collapseVar==1}">{{dropDown}}
                 <a href="" ng-click="check(1)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
                         class="fa arrow"></span></a>
