--- a/public/components/order/assignTrips.html
+++ b/public/components/order/assignTrips.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Add Truck for ORDER ID : {{orderId}}</div>
+            <div class="panel-heading">Add Truck for ORDER ID : {{id}}</div>
             <div class="panel-body">
                 <div class="row">
                     <div class="col-lg-12">
