--- a/public/components/dashboard-home/dashboardHome.html
+++ b/public/components/dashboard-home/dashboardHome.html
@@ -13,5 +13,5 @@
         <stats number="3" comments=" Waiting Trucks!" colour="red" type="support"></stats>
     </div>
     <!-- /.panel -->
-    <h3>Work In Progress </h3>
+    <!-- <h3>Work In Progress </h3> -->
 </div>
