--- a/public/components/staticpart/contact.html
+++ b/public/components/staticpart/contact.html
@@ -49,8 +49,11 @@
 				<h2 class="tittle tittle-temp">CONTACT</h2>
 			</div>
 			<div class="contact-map contact-map-temp">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819"></iframe>
+				<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1253.1847208947454!2d72.87361680663666!3d19.11640598982782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1453056400534" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+				<iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDBPK-J5T-VdpIxw8nYmnm9wubPnuICYos&center=19.1161986,72.873237&zoom=18&maptype=roadmap" allowfullscreen></iframe>
 			</div>
+
 			<div class="contact-form contact-form-temp">
 				<form>
 						<input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
