Hide the Callback UI elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -389,6 +389,7 @@ a.callbacks_nav.callbacks1_nav.prev {
 }
 
 .callbacks_tabs{
+  display:none;
 	list-style: none;
 	position: absolute;
 	top: 141%;
