--- a/public/components/req-order/reqOrder.html
+++ b/public/components/req-order/reqOrder.html
@@ -1,4 +1,4 @@
-<div ng-controller="reqOrderCtrl">
+<div>
     <div class="row">
         <div class="col-lg-8">
             <h1 class="page-header">Requested Orders</h1>
