--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -114,7 +114,7 @@
                 <div class="bottom-spa bottom-spa-temp"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></div>
             </div>
             <div class="col-md-4 col-md-4-temp bottom-grid bottom-grid-temp">
-                <div class="bottom-text bottom-text-temp">
+                <div class="bottom-text bottom-text-temp" style="padding-top:52px;padding-bottom:30px;">
                     <h3>Efficiency</h3>
                     <p>With Technology at core bringing disruptive business models to Logistics industry and getting better solutions and services for sustainable growth.</p>
                 </div>
