--- a/public/components/staticpart/contact.html
+++ b/public/components/staticpart/contact.html
@@ -48,9 +48,9 @@
 			<div class="contact-info">
 				<h2 class="tittle tittle-temp">CONTACT</h2>
 			</div>
-			<div class="contact-map contact-map-temp">
+			<div class="contact-map contact-map-temp" id="overlay">
 				<!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1253.1847208947454!2d72.87361680663666!3d19.11640598982782!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1453056400534" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-				<iframe width="600" height="450" frameborder="0" style="border:0"
+				<iframe id="map" width="600" height="450" frameborder="0" style="border:0"
 src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDBPK-J5T-VdpIxw8nYmnm9wubPnuICYos&center=19.1161986,72.873237&zoom=18&maptype=roadmap" allowfullscreen></iframe>
 			</div>
 
@@ -88,6 +88,27 @@ src="https://www.google.com/maps/embed/v1/view?key=AIzaSyDBPK-J5T-VdpIxw8nYmnm9w
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <!-- //smooth scrolling -->
-
+	
+	<!--Map Script to prevent scrolling on mouse over-->
+	<style type="text/css">
+		.scrolloff{
+			pointer-events: none;
+		}
+	</style>
+	<script type="text/javascript">
+		$(document).ready(function () {
+	        $('#map').addClass('scrolloff');
+	        
+	        $('#overlay').on("mouseup",function(){          
+	            $('#map').addClass('scrolloff');  
+	        });
+	        $('#overlay').on("mousedown",function(){        
+	            $('#map').removeClass('scrolloff');
+	        });
+	        $("#map").mouseleave(function () {               
+	            $('#map').addClass('scrolloff');       
+	        });
+    	});
+	</script>	
 </body>
 </html>
