--- a/public/components/sidebar/sidebar.html
+++ b/public/components/sidebar/sidebar.html
@@ -21,7 +21,7 @@
                 <a ui-sref="dashboard.ongoingTrips"><i class="fa fa-table fa-fw"></i>Ongoing Trips</a>
             </li>
             <li ui-sref-active="active">
-                <a ui-sref="dashboard.fut1"><i class="fa fa-map-marker fa-fw"></i>Maps</a>
+                <a ui-sref="dashboard.maps"><i class="fa fa-map-marker fa-fw"></i>Maps</a>
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.fut2"><i class="fa fa-fire fa-fw"></i>Alerts</a>
