--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -353,3 +353,5 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13
 }
+
+.angular-google-map-container { height: 400px; }
