--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -16,11 +16,11 @@
                 <div class="collapse navbar-collapse navbar-collapse-temp nav-wil" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-nav-temp">
                         <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2 active active-temp" href="home">Home</a></li>
-                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="about">About</a></li>
+                        <!-- <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="about">About</a></li> -->
                         <!-- <li><a class="hvr-overline-from-center button2" href="typography">Academics</a></li> -->
                         <!-- <li><a class="hvr-overline-from-center button2" href="services.html">Services</a></li> -->
-                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="contact">Contact</a></li>
-                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li>
+                        <!-- <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="contact">Contact</a></li>
+                        <li><a class="hvr-overline-from-center hvr-overline-from-center-temp button2" href="login">Login</a></li> -->
                     </ul>
                     <!-- <div class="search-box">
 							<div id="sb-search" class="sb-search">
@@ -70,23 +70,48 @@
                 </li>
                 <li>
                     <div class="banner-info banner-info-temp">
-                        <h3>Efficient and sustainable solutions </h3>
+                        <h3>Efficient and Sustainable solutions </h3>
                     </div>
                 </li>
                 <li>
                     <div class="banner-info banner-info-temp">
-                        <h3>Big Data for Big Industry</h3>
+                        <h3>Data Driven Approach towards Future</h3>
                     </div>
                 </li>
-                <li>
+                <!-- <li>
                     <div class="banner-info banner-info-temp">
                         <h3>Operational Excellence</h3>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
+    <div class="row"></progress>">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please Sign In</h3>
+                </div>
+                <div class="panel-body">
+                    <form role="form" ng-controller="loginCtrl" ng-submit="login(credentials)">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="E-mail" name="username" type="text" 
+                                ng-model="credentials.username" autofocus>
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Password" name="password" type="password"
+                                ng-model="credentials.password" value="">
+                            </div>
+                            <button type="submit" class="btn btn-lg btn-success btn-block">Login</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+    
 <!-- //banner -->
 <!-- banner-bottom banner-bottom-temp -->
 <div class="banner-bottom banner-bottom-temp">
@@ -124,9 +149,8 @@
         </div>
     </div>
 </div>
-<!-- //banner-bottom
-<!-- footer -->
-<div class="footer footer-temp">
+<!-- //banner-bottom footer -->
+<div class="footer footer-temp" ng-controller="contactController">
     <div class="container">
         <div class="contact contact-temp">
             <div class="container">
@@ -136,13 +160,14 @@
                     </div>
                     <div class="contact-form contact-form-temp">
                         <form>
-                            <input type="text" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
-                            <input type="text" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
-                            <input type="text" value="Telephone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Telephone';}" required="">
-                            <textarea onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message</textarea>
-                            <input type="submit" value="SEND">
+                            <input type="text" placeholder="name" ng-model="contactData.name" required>
+                            <input type="text" placeholder="Email" ng-model="contactData.email" required>
+                            <input type="text" placeholder="Telephone" ng-model="contactData.telephone">
+                            <textarea ng-model="contactData.message" placeholder="Short Message"></textarea required>
+                            <button class="btn btn-primary" ng-click="submitForm()">Submit</button>
                         </form>
                     </div>
+                    <span class="alert" ng-model="message"></span>
                 </div>
             </div>
         </div>
