--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -211,6 +211,28 @@
         </div>
     </div>
     <!-- //footer -->
+    <footer class="text-center">
+        <div class="footer-above">
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col col-md-4">
+                        <h3 class="footer-title">Logiport Tech PVT. LTD.</h3>
+                        <p>L-603 Maheshwari Nagar Kondivita Road Chakala,Andheri East</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3 class="footer-title">Links</h3>
+                        <p><i class="fa fa-phone-square"></i>  Call us <br><i class="fa fa-truck"></i> Sales <br><i class="fa fa-comments"></i> Contact</p>
+                    </div>
+                    <div class="footer-col col-md-4">
+                        <h3 class="footer-title">Logo</h3>
+                        <p>
+                        	Logo
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- smooth scrolling -->
     <script type="text/javascript">
     $(document).ready(function() {
