--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -216,12 +216,12 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3 class="footer-title">Logiport Tech PVT. LTD.</h3>
+                        <h3 class="footer-title">Logiport Tech Pvt. Ltd.</h3>
                         <p>L-603 Maheshwari Nagar Kondivita Road Chakala,Andheri East</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3 class="footer-title">Links</h3>
-                        <p><i class="fa fa-phone-square"></i>  Call us <br><i class="fa fa-truck"></i> Sales <br><i class="fa fa-comments"></i> Contact</p>
+                        <p><i class="fa fa-phone-square"></i>  Call us <br>Amit 8888837102<br>Ankur 8879006469 <br><br><i class="fa fa-truck"></i> Sales: Sales@logiport.in <br><i class="fa fa-comments"></i> Contact: Contact@logiport.in</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3 class="footer-title">Logo</h3>
