--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -213,15 +213,15 @@
     <!-- //footer -->
     <footer class="text-center">
         <div class="footer-above">
-            <div class="container">
+            <div class="footer-box">
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3 class="footer-title">Logiport Tech Pvt. Ltd.</h3>
-                        <p>L-603 Maheshwari Nagar Kondivita Road Chakala,Andheri East</p>
+                        <p>L-603,<br>Maheshwari Nagar,<br>Kondivita Road,<br>Chakala,<br>Andheri East</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3 class="footer-title">Links</h3>
-                        <p><i class="fa fa-phone-square"></i>  Call us <br>Amit 8888837102<br>Ankur 8879006469 <br><br><i class="fa fa-truck"></i> Sales: Sales@logiport.in <br><i class="fa fa-comments"></i> Contact: Contact@logiport.in</p>
+                        <p><i class="fa fa-phone-square"></i>  Call us <br>Amit: 8888837102<br>Ankur: 8879006469 <br><br><i class="fa fa-envelope"></i> Get in touch<br> Sales: <a href="mailto:your-email@your-domain.com">Sales@logiport.in</a> <br>Contact: <a href="mailto:your-email@your-domain.com">Contact@logiport.in</a></p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3 class="footer-title">Logo</h3>
