--- a/public/css/style.css
+++ b/public/css/style.css
@@ -900,13 +900,14 @@ margin:44px 0 0 0;
 font-size:14px;
 color: #c2c2c2;
 font-weight: 600;
-text-align:center;
+text-align:left;
 }
 .footer-temp p a{
-color:#fc3a3a;
+color:#22C3E8;
+font-weight: 200;
 }
 .footer-temp p a:hover{
-color: #c2c2c2;
+color: red;
 }
 .footer-grid-temp h3{
   margin: 0 0 20px 0;
@@ -2209,7 +2210,7 @@ footer {
 }
 
 footer h3 {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 footer .footer-above {
@@ -2220,11 +2221,18 @@ footer .footer-above {
 footer .footer-col {
     margin-bottom:50px;
 }
+.footer-box{
+  margin-left: auto;
+}
+.fa-phone-square {
+  color: white;
+}
+.fa-envelope{
+  color: white;
+}
 .footer-title{
-    min-height: 70px;
-    text-align:center;
-    font-size:32px;
-    font-family: 'Alegreya', serif;
+    text-align:left;
+    font-size:28px;
     color:#fc3a3a;
     margin-bottom:50px;
 }
