--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -216,7 +216,7 @@
             <div class="footer-box">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3 class="footer-title">Logiport Tech Pvt. Ltd.</h3>
+                        <h3 class="footer-title">Logiport Technologies Pvt. Ltd.</h3>
                         <p>L-603,<br>Maheshwari Nagar,<br>Kondivita Road,<br>Chakala,<br>Andheri East</p>
                     </div>
                     <div class="footer-col col-md-4">
