--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ html, body{
 	margin:0;
 	background:	#fff;
 	font-family: 'Open Sans', sans-serif;
+  overflow: hidden;
 }
 h4, h5, h6,
 h1, h2, h3 {
@@ -491,6 +492,7 @@ top: 9%;
 /*-- banner-info-temp --*/
 .banner-info-temp {
     margin-top: 110px;
+    min-height: 150px;
 }
 
 .banner-info-temp h3{
@@ -2214,8 +2216,9 @@ footer h3 {
 }
 
 footer .footer-above {
-    padding-top: 50px;
+    padding: 50px;
     background-color: #2c3e50;
+    margin: -15px;
 }
 
 footer .footer-col {
