--- a/public/components/maps/map.html
+++ b/public/components/maps/map.html
@@ -1,3 +1,3 @@
 <div>
-	<ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+    <ui-gmap-google-map center='mapOpts.center' zoom='mapOpts.zoom'></ui-gmap-google-map>
 </div>
