--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1329,7 +1329,7 @@ h3.tittle-temp.tit3-temp {
 	height: 32px;
 	border: none;
 	text-indent: 100%;
-	background: url("img/arr.png") no-repeat 0px 0px;
+	background: url("../img/arr.png") no-repeat 0px 0px;
 }
 #toTopHover {
 	width: 32px;
