--- a/public/components/ongoing-trips/ongoingTrips.html
+++ b/public/components/ongoing-trips/ongoingTrips.html
@@ -12,6 +12,7 @@
         <div class="col-lg-12">
             <div class="panel panel-default">
                 <div class="panel-heading">Ongoing Trips</div>
+                <div class="panel-heading" ng-if="trips.length==0">No Ongoing Trips </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
