fix and home logo remove

--- a/public/components/staticpart/home.html
+++ b/public/components/staticpart/home.html
@@ -247,20 +247,19 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3 class="footer-title">Logiport Technologies Pvt. Ltd.</h3>
-                        <p>L-603,<br>Maheshwari Nagar,<br>Kondivita Road,<br>Chakala,<br>Andheri East</p>
+                    <div class="col-md-6">
+                        <h5 class="footer-title">Logiport Technologies Pvt. Ltd.</h5>
+                        <p>L-603,Maheshwari Nagar,Kondivita Road,<br>Chakala,Andheri East</p>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3 class="footer-title">Links</h3>
+                    <div class="footer-col col-md-6">
+                        <h5 class="footer-title">Links</h5>
                         <p><i class="fa fa-phone-square"></i>  Call us <br>Amit: 8888837102<br>Ankur: 8879006469 <br><br><i class="fa fa-envelope"></i> Get in touch<br> Sales: <a href="mailto:your-email@your-domain.com">Sales@logiport.in</a> <br>Contact: <a href="mailto:your-email@your-domain.com">Contact@logiport.in</a></p>
                     </div>
-                    <div class="footer-col col-md-4">
-                        <h3 class="footer-title">Logo</h3>
-                        <p>
-                        	Logo
-                        </p>
-                    </div>
+                    <!--<div class="footer-col col-md-2">
+                        <div>
+                            <img class="footer-logo" src="../../img/logo.jpg" />
+                        </div>
+                    </div>-->
                 </div>
             </div>
         </div>
