--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2240,10 +2240,10 @@ footer .footer-col {
   color: white;
 }
 .footer-title{
-    min-height: 60px;
+    /*min-height: 60px;*/
     text-align:left;
-    font-size:28px;
+    font-size:22px;
     color:#fc3a3a;
-    margin-bottom:50px;
+    /*margin-bottom:50px;*/
 }
 /*-- //responsive media queries --*/
