--- a/public/components/assigned-trips/assignedTrips.html
+++ b/public/components/assigned-trips/assignedTrips.html
@@ -11,7 +11,8 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Assigned Trips</div>
+                <div class="panel-heading" ng-hide="trips.length==0">Assigned Trips</div>
+                <div class="panel-heading" style="color:red" ng-show="trips.length==0"> No Assigned Trips</div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
