--- a/public/components/ongoing-trips/ongoingTrips.html
+++ b/public/components/ongoing-trips/ongoingTrips.html
@@ -5,45 +5,51 @@
         </div>
         <div class="col-lg-4" style="padding-top:60px">
             <button class="btn btn-primary">future Functionality</button>
+            <button class="btn btn-primary" ng-click="refresh()"><span class="glyphicon" glyphicon-refresh></span>refresh</button>
         </div>
     </div>
     <!-- /.row -->
     <div class="row">
         <div class="col-lg-12">
             <div class="panel panel-default">
-                <div class="panel-heading">Ongoing Trips</div>
-                <div class="panel-heading" ng-if="trips.length==0">No Ongoing Trips </div>
+                <div class="panel-heading" ng-hide="trips.length==0">Ongoing Trips</div>
+                <div class="panel-heading" style="color:red" ng-show="trips.length==0">No Ongoing Trips </div>
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="dataTable_wrapper">
-                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                            <thead>
-                                <tr>
-                                    <th>Trip ID</th>
-                                    <th>Gps ID</th>
-                                    <th>Order ID</th>
-                                    <th>Start Time</th>
-                                    <th>Start Location</th>
-                                    <th>End Location</th>
-                                    <th>Completed Time</th>
-                                    <th>Sales ID</th>
-                                    <th>Kam ID</th>
-                                    <tbody>
-                                        <tr class="odd gradeX" ng-repeat="trip in trips">
-                                            <td>{{trip.tripId}}</td>
-                                            <td>{{trip.gpsId}}</td>
-                                            <td>{{trip.orderId}}</td>
-                                            <td>{{trip.startTime}}</td>
-                                            <td>{{trip.startLocation}}</td>
-                                            <td>{{trip.endLocation}}</td>
-                                            <td>{{trip.salesId}}</td>
-                                            <td>{{trip.kamId}}</td>
-                                        </tr>
-                                    </tbody>
-                                </tr>
-                            </thead>
-                        </table>
-                    </div>
+                        <div class="refresh-dashboard" ng-show="isRefreshing">
+                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                    <tr>
+                                        <th>Trip ID</th>
+                                        <th>Gps ID</th>
+                                        <th>Order ID</th>
+                                        <th>Start Time</th>
+                                        <th>Start Location</th>
+                                        <th>End Location</th>
+                                        <!--<th>Completed Time</th>-->
+                                        <th>Sales ID</th>
+                                        <th>Kam ID</th>
+                                        <th>Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="odd gradeX" ng-repeat="trip in trips">
+                                        <td>{{trip.tripId}}</td>
+                                        <td>{{trip.gpsId}}</td>
+                                        <td>{{trip.orderId}}</td>
+                                        <td>{{trip.startTime}}</td>
+                                        <td>{{trip.startLocation}}</td>
+                                        <td>{{trip.endLocation}}</td>
+                                        <td>{{trip.salesId}}</td>
+                                        <td>{{trip.kamId}}</td>
+                                        <td><button class="btn btn-sm btn-primary" ng-click="stopTrip(trip.tripId)">Finish</button></td>
+                                    </tr>
+                                </tbody>
+                               
+                            </table>
+                            </div>
+                        </div>
                 </div>
             </div>
             <!-- /.table-responsive -->
